--- a/index.html
+++ b/index.html
@@ -112,6 +112,10 @@
         font-size: 2em;
         font-weight: bold;
     }
+    .metallorum__sections {
+        color: #11547b;
+        background-color: #f2f5f7;
+    }
     .othernews__item__picture {
         width: 90%;
         margin: 0 auto;
@@ -123,12 +127,40 @@
 </head>
 <body>
     <header>
-        <nav class="global-nav nav nav-fill">
-            <a href="" class="nav-item nav-link">Inicio</a>
-            <a href="" class="nav-item nav-link">RH</a>
-            <a href="" class="nav-item nav-link">Proyectos</a>
-            <a href="" class="nav-item nav-link">Juridico</a>
-            <a href="" class="nav-item nav-link">Abastecimientos</a>
+        <nav class="global-nav navbar navbar-expand-md navbar-dark bg-dark">
+            <a href="" class="navbar-brand banner__logo">
+                <img src="./logo.png" alt="" class="banner_logo__img">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav flex-fill nav nav-fill">
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">RH</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Proyectos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Juridico</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">Abastecimientos</a>
+                    </li>
+                </ul>
+                <form class="form-inline justify-content-center">
+                    <div class="input-group">
+                        <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </nav>
         <div class="banner row no-gutters">
             <div class="col-12">
@@ -143,16 +175,6 @@
                 <div class="banner__content">
                     <div class="row no-gutters justify-content-center">
                         <div class="col-8">
-                            <div class="row no-gutters justify-content-between  ">
-                                <div class="col-sm-4">
-                                    <div class="banner__logo">
-                                        <img src="./logo.png" alt="" class="banner_logo__img">
-                                    </div>
-                                </div>
-                                <div class="col-sm-3 text-right">
-                                    <input class="banner__search align-middle" type="text" placeholder="buscar en este sitio" />
-                                </div>
-                            </div>
                             <div class="row no-gutters">
                                 <div class="col-12">
                                     <ul class="site-nav nav nav-pills nav-fill">
@@ -192,7 +214,7 @@
         </div>
     </header>
     <section class="metallorum row no-gutters justify-content-center">
-        <div class="col-xs-12 col-md-9">
+        <div class="col-xs-12 col-md-11 col-lg-9">
             <div class="container-fluid">
                 <div class="principalnews row">
                     <div class="mt-2 mt-md-0 col-md-4">
@@ -230,17 +252,17 @@
                     </div>
                 </div>
                 <div class="row justify-content-around">
-                    <div class="twitter mt-2 mt-md-0 col-xs-12 col-md-3">
+                    <div class="mt-2 mt-md-0 col-xs-12 col-md-3">
                         <h3>Twitter</h3>
-                        <div class="text-center">
-                            <a class="twitter-timeline"  href="https://twitter.com/search?q=from%3A%40mashable%20OR%20from%3A%40newegg" data-chrome="nofooter,noheader" data-height="600px" data-theme="dark" data-widget-id="991718003787096065">Tweets sobre from:@mashable OR from:@newegg</a>
+                        <div class="text-center metallorum__sections">
+                            <a class="twitter-timeline"  href="https://twitter.com/search?q=from%3A%40mashable%20OR%20from%3A%40newegg" data-chrome="nofooter,noheader" data-height="600px" data-widget-id="991718003787096065">Tweets sobre from:@mashable OR from:@newegg</a>
                             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
                         </div>
                     </div>
-                    <div class="mt-2 mt-md-0 col-xs-12 col-md-3">
+                    <div class="mt-2 mt-md-0 col-xs-12 col-md-4">
                         <h3>Noticias</h3>
-                        <div class="othernews">
-                            <div class="othernews__item row no-gutters">
+                        <div class="othernews metallorum__sections">
+                            <div class="othernews__item mb-2 row no-gutters">
                                 <div class="col-sm-4">
                                     <div class="othernews__item__picture">
                                         <img src="./noticias4.jpg" alt="" class="othernews__item__picture__image">
@@ -255,7 +277,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="othernews__item row no-gutters">
+                            <div class="othernews__item mb-2 row no-gutters">
                                 <div class="col-sm-4">
                                     <div class="othernews__item__picture">
                                         <img src="./noticias5.jpg" alt="" class="othernews__item__picture__image">
@@ -270,7 +292,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="othernews__item row no-gutters">
+                            <div class="othernews__item mb-2 row no-gutters">
                                 <div class="col-sm-4">
                                     <div class="othernews__item__picture">
                                         <img src="./noticias6.png" alt="" class="othernews__item__picture__image">
@@ -319,8 +341,8 @@
                     </div>
                     <div class="mt-2 mt-md-0 col-xs-12 col-md-3">
                         <h3>Indicadores</h3>
-                        <div class="text-center">
-                            <script type="text/javascript" src="https://www.goldpriceoz.com/goldwidget.php?m=000000&g=FFFFFF&c=717375&i=FFFFFF&l=DDDDDD&o=ECEAEA&w=255"></script>
+                        <div class="text-center metallorum__sections">
+                            <script type="text/javascript" src="https://www.goldpriceoz.com/goldwidget.php?m=000000&g=FFFFFF&c=717375&i=FFFFFF&l=DDDDDD&o=ECEAEA"></script>
                         </div>
                     </div>
                 </div>
