Cambio de color de los titulos de las columnas

--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
         font-size: 2em;
         font-weight: bold;
     }
+    .metallorum {
+        color: #11547b;
+    }
     .metallorum__sections {
         color: #11547b;
         background-color: #f2f5f7;
