--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         opacity: 1;
     }    
     .global-nav {
-        background-color: #555;
+        background-color: #393d42;
     }
     .global-nav .nav-link {
         color: white;
@@ -125,11 +125,39 @@
     .othernews__item__picture__image {
         width: 100%;
     }
+    .metallorum__footer {
+        background-color: #393d42
+    }
+    .metallorum__footer__sections {
+        align-items: center;
+    }
+    .logo__img, .mapa__img {
+        width: 100%;
+    }
+    .logo__img {
+        max-width: 296px;
+    }
+    .mapa__img {
+        max-width: 349px;
+    }
+    .metallorum__footer__links > a {
+        background-color: transparent;
+        color: white;
+        border-color: #a88844;
+    }
+    .metallorum__afterfooter {
+        background-color: black;
+        color: white;
+    }
+    .metallorum__afterfooter__text {
+        font-size: 1em;
+        font-weight: bold;
+    }
     </style>
 </head>
 <body>
     <header>
-        <nav class="global-nav navbar navbar-expand-md navbar-dark bg-dark">
+        <nav class="global-nav navbar navbar-expand-md navbar-dark">
             <a href="" class="navbar-brand banner__logo">
                 <img src="./logo.png" alt="" class="banner_logo__img">
             </a>
@@ -351,6 +379,34 @@
             </div>
         </div>
     </section>
+    <footer class="metallorum__footer py-3">
+        <div class="container">
+            <div class="row">
+                <div class="text-center col-12">
+                    <ul class="metallorum__footer__sections nav nav-fill">
+                        <li class="nav-item">
+                            <img src="./logo.png" alt="" class="logo__img">
+                        </li>
+                        <li class="nav-item">
+                                <img src="./mapa.png" alt="" class="mapa__img">
+                        </li>
+                        <li class="nav-item">
+                            <div class="metallorum__footer__links list-group list-group-flush text-left">
+                                <a href="" class="list-group-item list-group-item-action">CONTACTO</a>
+                                <a href="" class="list-group-item list-group-item-action">FAQ'S</a>
+                                <a href="" class="list-group-item list-group-item-action">AVISO DE PRIVACIDAD</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <div class="row no-gutters metallorum__afterfooter py-3 text-center">
+        <div class="col-12">
+            <span class="metallorum__afterfooter__text">TODOS LOS DERECHOS RESERVADOS METALLŌRUM HOLDING, S.A.P.I. de C.V. ® 2018</span>
+        </div>
+    </div>
     <script src="./jquery.nivo.slider.js" type="text/javascript"></script>
     <script type="text/javascript">
         $(function() {
