Agregados los ultimos proyectos de ejemplo y campos al formulario de help desk

--- a/index.html
+++ b/index.html
@@ -414,16 +414,21 @@
                 <div class="row mt-2">
                     <div class="col-12">
                         <ul class="nav nav-tabs" id="ProjectsTabs" role="tablist">
-                            <li class="nav-item"><a href="#project1" class="nav-link active" data-toggle="tab" id="project-tab1" role="tab" aria-controls="project1">Proyecto 1</a></li>
-                            <li class="nav-item"><a href="#project2" class="nav-link" data-toggle="tab" id="project-tab2" role="tab" aria-controls="project2">Proyecto 2</a></li>
-                            <li class="nav-item"><a href="#project3" class="nav-link" data-toggle="tab" id="project-tab3" role="tab" aria-controls="project3">Proyecto 3</a></li>
+                            <li class="nav-item"><a href="#project1" class="nav-link active" data-toggle="tab" id="project-tab1" role="tab" aria-controls="project1">Planta ADR</a></li>
+                            <li class="nav-item"><a href="#project2" class="nav-link" data-toggle="tab" id="project-tab2" role="tab" aria-controls="project2">Adquisición Mina</a></li>
+                            <li class="nav-item"><a href="#project3" class="nav-link" data-toggle="tab" id="project-tab3" role="tab" aria-controls="project3">Exploración</a></li>
                         </ul>
                         <div class="tab-content">
                             <div class="tab-pane show active" id="project1" role="tabpanel" aria-labelledby="project-tab1">
                                 <img src="./projectimg.png" alt="" class="projectimage">
                             </div>
-                            <div class="tab-pane" id="project2" role="tabpanel" aria-labelledby="project-tab2">Hola Mundo este es el Proyecto 2</div>
-                            <div class="tab-pane" id="project3" role="tabpanel" aria-labelledby="project-tab3">Hola Mundo este es el Proyecto 3</div>
+                            <div class="tab-pane" id="project2" role="tabpanel" aria-labelledby="project-tab2">
+                                <img src="./projectimg2.png" alt="" class="projectimage">
+                            </div>
+                            <div class="tab-pane" id="project3" role="tabpanel" aria-labelledby="project-tab3">
+                                <img src="./timeline.png" alt="" class="projectimage">
+                                <img src="./items.png" alt="" class="projectimage">
+                            </div>
                         </div>
                     </div>
                 </div>
