--- a/index.html
+++ b/index.html
@@ -6,187 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>INTRANET</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href="./metallorumstyles.css">
     <link href="./nivo-slider.css" rel="stylesheet" type="text/css" media="screen">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-    <style>
-    /*media screen*/
-    .nivo-controlNav {
-        text-align: center;
-        padding: 15px 0;
-        position: absolute;
-        z-index: 999;
-        bottom: 16px;
-        left: 3%;
-    }
-    /*media screen*/
-    .nivo-controlNav a {
-        content: " \25CF";
-        font-size: 0px;
-        display: inline-block;
-        height: 16px;
-        width: 16px;
-        color: #fff;
-        padding: 1px 5px;
-        border-radius: 100%;
-        background-color: yellow;
-        margin-left: 5px;
-        text-decoration: none;
-        opacity: 0.2;
-        }
-    /*media screen*/
-    .nivo-controlNav a.active {
-        opacity: 1;
-    }    
-    .global-nav {
-        background-color: #393d42;
-    }
-    .global-nav .nav-link {
-        color: white;
-    }
-    .banner {
-        position: relative;
-    }
-    .banner__bgslider {
-        position: relative;
-        height: 350px;
-        overflow: hidden;
-    }
-    .banner__content {
-        position: absolute;
-        top: 5%;
-        left: 0;
-        right: 0;
-        z-index: 10;
-
-    }
-    .banner__logo {
-        display: inline-block;
-    }
-    .banner_logo__img {
-        width: 100%;
-    }
-    .site-nav {
-        background-color: white;
-        color: black;
-        margin-top: 1em;
-        border-radius: 5px;
-    }
-    .principalnews {
-        margin: 1em 0;
-    }
-    .principalnews__item {
-        width: 100%;
-        margin: 0 auto;
-        position: relative;
-        min-height: 300px;
-    }
-    .principalnews__item__image {
-        width: 100%;
-    }
-    .principalnews__item__title {
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        background-color: #444;
-        /*background-color: rgba(20,20,20,0.8);*/
-        color: white;
-        padding: 1em;
-        min-height: 43%;
-    }
-    .carousel {
-        margin-top: 1em;
-        width: 100%;
-        max-width: 400px;
-        height: 150px;
-        background-color: #444;
-        background-color: rgba(20,20,20,0.8);
-        color: yellow;
-    }
-    .carousel-item {
-        padding: 1em;
-    }
-    .carousel span {
-        font-size: 2em;
-        font-weight: bold;
-    }
-    .metallorum {
-        color: #11547b;
-    }
-    .metallorum__sections {
-        color: #11547b;
-        background-color: #f2f5f7;
-    }
-    .othernews__item__picture {
-        width: 90%;
-        margin: 0 auto;
-    }
-    .othernews__item__picture__image {
-        width: 100%;
-    }
-    .metallorum__footer {
-        background-color: #393d42;
-        position: relative;
-    }
-    .metallorum__footer__banner {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        width: 100%;
-        overflow: hidden;
-        display: flex;
-        align-items: center;
-    }
-    .metallorum__footer__banner img {
-        width: 100%;
-    }
-    .metallorum__footer__sections {
-        align-items: center;
-        position: relative;
-        z-index: 10;
-        background-color: rgba(20, 20, 20, 0.5)
-    }
-    .logo__img {
-        max-width: 100%;
-    }
-    .metallorum__footer__links > a {
-        background-color: transparent;
-        color: white;
-        border-color: #a88844;
-    }
-    .metallorum__afterfooter {
-        background-color: black;
-        color: white;
-    }
-    .metallorum__afterfooter__text {
-        font-size: 1em;
-        font-weight: bold;
-    }
-    .projectimage {
-        width: 100%;
-    }
-    .helpdeskalert {
-        /* /display: none; */
-        position: fixed;
-        top: 1vh;
-        right: 1vw;
-        left: 1vw;
-        z-index: 9999;
-    }
-    .helpdeskalert.fade:not(.show) {
-        display: none;
-    }
-    .org__image {
-        width: 100%;
-    }
-    @media (min-width: 768px) {
-        .helpdeskalert {
-            left: inherit;
-            width: 30vw;
-        }
-    }
-    </style>
 </head>
 <body>
     <header>
