--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>INTRANET</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link rel="stylesheet" href="./metallorumstyles.css">
-    <link href="./nivo-slider.css" rel="stylesheet" type="text/css" media="screen">
+    <link rel="stylesheet" href="./css/metallorumstyles.css">
+    <link href="./css/nivo-slider.css" rel="stylesheet" type="text/css" media="screen">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <script src="./js/jquery.nivo.slider.js" type="text/javascript"></script>
+    <script src="./js/metallorum.js" type="text/javascript"></script>
 </head>
 <body>
     <header>
         <nav class="global-nav navbar navbar-expand-md navbar-dark">
             <a href="" class="navbar-brand banner__logo">
-                <img src="./logo.png" alt="" class="banner_logo__img">
+                <img src="./images/logo.png" alt="" class="banner_logo__img">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -53,10 +55,10 @@
             <div class="col-12">
                 <div class="banner__bgslider">
                     <div id="slider" class="nivoSlider"> 
-                        <img src="./banner01.jpg" alt=""/>
-                        <img src="./banner02.jpg" alt=""/>
-                        <img src="./banner03.jpg" alt=""/>
-                        <img src="./banner04.jpg" alt=""/>
+                        <img src="./images/banner01.jpg" alt=""/>
+                        <img src="./images/banner02.jpg" alt=""/>
+                        <img src="./images/banner03.jpg" alt=""/>
+                        <img src="./images/banner04.jpg" alt=""/>
                     </div>
                 </div>
                 <div class="banner__content">
@@ -107,7 +109,7 @@
                     <div class="mt-2 mt-md-0 col-md-4">
                         <a href="https://www.coindesk.com/information/how-bitcoin-mining-works/">
                             <div class="principalnews__item">
-                                <img src="./noticias1.jpg" alt="" class="principalnews__item__image">
+                                <img src="./images/noticias1.jpg" alt="" class="principalnews__item__image">
                                 <div class="principalnews__item__title">
                                     <h5>Titulo de Noticia</h5>
                                     <p>Descripción de noticia</p>
@@ -118,7 +120,7 @@
                     <div class="mt-2 mt-md-0 col-md-4">
                         <a href="">
                             <div class="principalnews__item">
-                                <img src="./noticias2.jpg" alt="" class="principalnews__item__image">
+                                <img src="./images/noticias2.jpg" alt="" class="principalnews__item__image">
                                 <div class="principalnews__item__title">
                                     <h5>Titulo de Noticia</h5>
                                     <p>Descripción de noticia</p>
@@ -129,7 +131,7 @@
                     <div class="mt-2 mt-md-0 col-md-4">
                         <a href="">
                             <div class="principalnews__item">
-                                <img src="./noticias3.jpg" alt="" class="principalnews__item__image">
+                                <img src="./images/noticias3.jpg" alt="" class="principalnews__item__image">
                                 <div class="principalnews__item__title">
                                     <h5>Titulo de Noticia</h5>
                                     <p>Descripción de noticia</p>
@@ -152,7 +154,7 @@
                             <div class="othernews__item mb-2 row no-gutters">
                                 <div class="col-sm-4">
                                     <div class="othernews__item__picture">
-                                        <img src="./noticias4.jpg" alt="" class="othernews__item__picture__image">
+                                        <img src="./images/noticias4.jpg" alt="" class="othernews__item__picture__image">
                                     </div>
                                 </div>
                                 <div class="col-sm-8">
@@ -167,7 +169,7 @@
                             <div class="othernews__item mb-2 row no-gutters">
                                 <div class="col-sm-4">
                                     <div class="othernews__item__picture">
-                                        <img src="./noticias5.jpg" alt="" class="othernews__item__picture__image">
+                                        <img src="./images/noticias5.jpg" alt="" class="othernews__item__picture__image">
                                     </div>
                                 </div>
                                 <div class="col-sm-8">
@@ -182,7 +184,7 @@
                             <div class="othernews__item mb-2 row no-gutters">
                                 <div class="col-sm-4">
                                     <div class="othernews__item__picture">
-                                        <img src="./noticias6.png" alt="" class="othernews__item__picture__image">
+                                        <img src="./images/noticias6.png" alt="" class="othernews__item__picture__image">
                                     </div>
                                 </div>
                                 <div class="col-sm-8">
@@ -197,7 +199,7 @@
                             <div class="othernews__item row no-gutters">
                                 <div class="col-sm-4">
                                     <div class="othernews__item__picture">
-                                        <img src="./noticias7.JPG" alt="" class="othernews__item__picture__image">
+                                        <img src="./images/noticias7.JPG" alt="" class="othernews__item__picture__image">
                                     </div>
                                 </div>
                                 <div class="col-sm-8">
@@ -212,7 +214,7 @@
                             <div class="othernews__item row no-gutters">
                                 <div class="col-sm-4">
                                     <div class="othernews__item__picture">
-                                        <img src="./noticias8.jpg" alt="" class="othernews__item__picture__image">
+                                        <img src="./images/noticias8.jpg" alt="" class="othernews__item__picture__image">
                                     </div>
                                 </div>
                                 <div class="col-sm-8">
@@ -244,14 +246,14 @@
                         </ul>
                         <div class="tab-content">
                             <div class="tab-pane show active" id="project1" role="tabpanel" aria-labelledby="project-tab1">
-                                <img src="./projectimg.png" alt="" class="projectimage">
+                                <img src="./images/projectimg.png" alt="" class="projectimage">
                             </div>
                             <div class="tab-pane" id="project2" role="tabpanel" aria-labelledby="project-tab2">
-                                <img src="./projectimg2.png" alt="" class="projectimage">
+                                <img src="./images/projectimg2.png" alt="" class="projectimage">
                             </div>
                             <div class="tab-pane" id="project3" role="tabpanel" aria-labelledby="project-tab3">
-                                <img src="./timeline.png" alt="" class="projectimage">
-                                <img src="./items.png" alt="" class="projectimage">
+                                <img src="./images/timeline.png" alt="" class="projectimage">
+                                <img src="./images/items.png" alt="" class="projectimage">
                             </div>
                         </div>
                     </div>
@@ -260,7 +262,7 @@
             <div class="tab-pane container-fluid" id="org" role="tabpanel" aria-labelledby="org-tab">
                 <div class="row mt-2">
                     <div class="col-12">
-                        <img src="./org.jpg" alt="" class="org__image">
+                        <img src="./images/org.jpg" alt="" class="org__image">
                     </div>
                 </div>
             </div>
@@ -268,12 +270,12 @@
     </section>
     <footer class="metallorum__footer py-3 mt-3">
         <div class="metallorum__footer__banner">
-            <img src="./banner04.jpg" alt="" class="metallorum__footer__banner__image">
+            <img src="./images/banner04.jpg" alt="" class="metallorum__footer__banner__image">
         </div>
         <div class="container">
             <div class="row metallorum__footer__sections">
                 <div class="text-center col-12 col-md-4">
-                    <img src="./logo.png" alt="" class="logo__img">
+                    <img src="./images/logo.png" alt="" class="logo__img">
                 </div>
                 <div class="text-center col-12 col-md-4"></div>
                 <div class="text-center col-12 col-md-4">
@@ -331,27 +333,5 @@
         <a href="#" class="close" aria-label="close">&times;</a>
         <strong>La solicitud fue enviada con exito</strong>
     </div>
-    <script src="./jquery.nivo.slider.js" type="text/javascript"></script>
-    <script type="text/javascript">
-        $(function() {
-            $('#slider').nivoSlider({
-                directionNav: false,
-                effect:"sliceDownRight"
-            });
-
-            $("#helpdesk__send").on("click", function(e) {
-                e.preventDefault();
-                $("#helpdeskmodal").modal("hide");
-                $("#helpdesk__success").addClass("show");
-                setTimeout(function(){
-                    $("#helpdesk__success").removeClass("show");
-                }, 5000);
-            });
-
-            $("#helpdesk__success").on("click", ".close", function(e) {
-                $("#helpdesk__success").removeClass("show");
-            });
-        });
-    </script> 
 </body>
 </html>
