Cambio de clases para pagina principal

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
         </div>
     </header>
-    <section class="metallorum row no-gutters justify-content-center">
+    <section class="metallorum metallorum__principal row no-gutters justify-content-center">
         <div class="tab-content col-xs-12 col-md-11 col-lg-9">
             <div class="tab-pane active show container-fluid" id="home" role="tabpanel" aria-labelledby="home-tab">
                 <div class="principalnews row">
