Banner de texto removido y cambio en etiquetas para pasar a SharePoint

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="./js/metallorum.js" type="text/javascript"></script>
 </head>
 <body>
-    <header>
+    <div class="metallorum__header">
         <nav class="global-nav navbar navbar-expand-md navbar-dark">
             <a href="" class="navbar-brand banner__logo">
                 <img src="./images/logo.png" alt="" class="banner_logo__img">
@@ -50,58 +50,42 @@
                 </form>
             </div>
         </nav>
-        <div class="banner row no-gutters">
-            <div class="col-12">
-                <div class="banner__bgslider">
-                    <div id="slider" class="nivoSlider"> 
-                        <img src="./images/banner01.jpg" alt=""/>
-                        <img src="./images/banner02.jpg" alt=""/>
-                        <img src="./images/banner03.jpg" alt=""/>
-                        <img src="./images/banner04.jpg" alt=""/>
-                    </div>
+    </div>
+    <div class="banner row no-gutters">
+        <div class="col-12">
+            <div class="banner__bgslider">
+                <div id="slider" class="nivoSlider"> 
+                    <img src="https://metallorumadministracion.sharepoint.com/PublishingImages/banner01.jpg" alt=""/>
+                    <img src="https://metallorumadministracion.sharepoint.com/PublishingImages/banner02.jpg" alt=""/>
+                    <img src="https://metallorumadministracion.sharepoint.com/PublishingImages/banner03.jpg" alt=""/>
                 </div>
-                <div class="banner__content">
-                    <div class="row no-gutters justify-content-center">
-                        <div class="col-8">
-                            <div class="row no-gutters">
-                                <div class="col-12">
-                                    <ul class="site-nav nav nav-pills nav-fill" id="intranetTab" role="tablist">
-                                        <li class="nav-item">
-                                            <a class="nav-link active" href="#home" id="home-tab" data-toggle="tab" aria-controls="home" aria-selected="true">Inicio</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="#projects" id="projects-tab" data-toggle="tab" aria-controls="projects">Proyectos</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="#org" id="org-tab" data-toggle="tab" aria-controls="org">Organigrama</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="">Link 4</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" id="helpdeskdialog" data-toggle="modal" data-target="#helpdeskmodal" href="">Help Desk</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="row no-gutters">
-                                <div class="col-sm-12">
-                                    <div class="carousel slide" data-ride="carousel" data-interval="3000">
-                                        <div class="carousel-inner">
-                                            <div class="carousel-item active"><span>Slide - 1</span></div>
-                                            <div class="carousel-item"><span>Slide - 2</span></div>
-                                            <div class="carousel-item"><span>Slide - 3</span></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+            </div>
+            <div class="banner__content">
+                <div class="row no-gutters justify-content-center">
+                    <div class="col-11 col-lg-8">
+                        <ul class="site-nav nav nav-pills nav-fill" id="intranetTab" role="tablist">
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#home" id="home-tab" data-toggle="tab" aria-controls="home" aria-selected="true">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#projects" id="projects-tab" data-toggle="tab" aria-controls="projects">Proyectos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#org" id="org-tab" data-toggle="tab" aria-controls="org">Organigrama</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="">Link 4</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="helpdeskdialog" data-toggle="modal" data-target="#helpdeskmodal" href="">Help Desk</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
-    </header>
-    <section class="metallorum metallorum__principal row no-gutters justify-content-center">
+    </div>
+    <div class="metallorum metallorum__principal row no-gutters justify-content-center">
         <div class="tab-content col-xs-12 col-md-11 col-lg-9">
             <div class="tab-pane active show container-fluid" id="home" role="tabpanel" aria-labelledby="home-tab">
                 <div class="principalnews row">
@@ -266,8 +250,8 @@
                 </div>
             </div>
         </div>
-    </section>
-    <footer class="metallorum__footer py-3 mt-3">
+    </div>
+    <div class="metallorum__footer py-3 mt-3">
         <div class="metallorum__footer__banner">
             <img src="./images/banner04.jpg" alt="" class="metallorum__footer__banner__image">
         </div>
@@ -286,7 +270,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </div>
     <div class="row no-gutters metallorum__afterfooter py-3 text-center">
         <div class="col-12">
             <span class="metallorum__afterfooter__text">TODOS LOS DERECHOS RESERVADOS METALLŌRUM HOLDING, S.A.P.I. de C.V. ® 2018</span>
