Nuevos estilos para el menu inferior y arreglo de otros estilos

--- a/index.html
+++ b/index.html
@@ -63,21 +63,28 @@
             <div class="banner__content">
                 <div class="row no-gutters justify-content-center">
                     <div class="col-11 col-lg-8">
-                        <ul class="site-nav nav nav-pills nav-fill" id="intranetTab" role="tablist">
+                        <ul class="site-nav nav nav-fill flex-column flex-lg-row" id="intranetTab" role="tablist">
                             <li class="nav-item">
-                                <a class="nav-link active" href="#home" id="home-tab" data-toggle="tab" aria-controls="home" aria-selected="true">Inicio</a>
+                                <a class="nav-link" href="#home" id="home-tab" data-toggle="tab" aria-controls="home" aria-selected="true">Capital Humano</a>
+                                <ul class="site-nav__menu nav p-2 d-none">
+                                    <li class="nav-item">
+                                        <ul class="flex-column nav site-nav__menu__links">
+                                            <li class="nav-item site-nav__links__item"><a href="" class="site-nav__links__item__link nav-link">Organigrama</a></li>
+                                            <li class="nav-item site-nav__links__item"><a href="" class="site-nav__links__item__link nav-link">Oracle HCM</a></li>
+                                            <li class="nav-item site-nav__links__item"><a href="" class="site-nav__links__item__link nav-link">Mesa de Ayuda</a></li>
+                                            <li class="nav-item site-nav__links__item"><a href="" class="site-nav__links__item__link nav-link">Cumpleaños</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#projects" id="projects-tab" data-toggle="tab" aria-controls="projects">Proyectos</a>
+                                <a class="nav-link" href="#projects" id="projects-tab" data-toggle="tab" aria-controls="projects">Juridico</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#org" id="org-tab" data-toggle="tab" aria-controls="org">Organigrama</a>
+                                <a class="nav-link" href="#org" id="org-tab" data-toggle="tab" aria-controls="org">Abastecimientos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="">Link 4</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" id="helpdeskdialog" data-toggle="modal" data-target="#helpdeskmodal" href="">Help Desk</a>
+                                <a class="nav-link" href="">Proyectos</a>
                             </li>
                         </ul>
                     </div>
